# pdf-hub

./: .gitattributes  .gitignore  AGENTS.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260531_0001_initial_schema.py  20260603_0002_document_file_hash.py  20260606_0003_page_extraction_status.py
backend/app/: main.py
backend/app/api/: routes_documents.py  routes_entities.py  routes_graph.py  routes_jobs.py  routes_search.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: __init__.py  chunk.py  document.py  entity.py  graph.py  job.py  mixins.py
backend/app/prompts/: entity_extraction.md  entity_validation.md  summary.md
backend/app/schemas/: document.py  entity.py  graph.py  job.py  search.py
backend/app/services/: document_service.py  embedding_service.py  entity_extraction_service.py  entity_service.py  entity_validation_service.py  graph_service.py  knowledge_refinement_service.py  pdf_processing_service.py  search_service.py  storage_service.py
backend/app/workers/: ingestion_worker.py  refinement_worker.py  worker_main.py
backend/pdf_knowledge_hub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_document_service.py  test_documents_api.py  test_embedding_service.py  test_entity_extraction_service.py  test_entity_service.py  test_entity_validation_service.py  test_graph_service.py  test_ingestion_worker.py  test_pdf_processing_service.py  test_refinement_worker.py  test_search_service.py
(+53 files in other folders)
