[project]
name = "pdf-knowledge-hub-backend"
version = "0.1.0"
description = "FastAPI backend for the PDF Knowledge Hub MVP."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.111.0",
  "pgvector>=0.3.0",
  "psycopg[binary]>=3.1.0",
  "PyMuPDF>=1.24.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
